Adicionada breve descrição

--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-Teste
+<html>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<head>
+    <style>
+        @font-face {
+            font-family: RobotoMonoRegular;
+            src: url('roboto-mono-regular.ttf');
+        }
+
+        body {
+            margin: 30px 30px 30px 30px
+        }
+
+        * {
+            font-family: RobotoMonoRegular
+        }
+
+        .fa {
+            background: #000000;
+            color: #ffffff;
+            padding: 15px;
+            font-size: 20px;
+            width: 20px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 50%;
+        }
+
+        img {
+            border-radius: 50%;
+        }
+
+        .title {
+            display: flex;
+            align-items: center;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="title">
+        <img src="profile.jpg" alt="profile" width="50px" height="50px" style="padding-right: 10px">
+        <h2>Bruno Pimentel</h2>
+    </div>
+
+    <p>
+        21yo.<br>
+        Mobile developer.<br>
+        I seek getting better day after day.<br>
+        Working to influence people positively.
+    </p>
+
+    <a href="#" class="fa fa-linkedin"></a>
+    <a href="https://facebook.com" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-instagram"></a>
+</body>
+
+</html>
