Adicionados links de mídias sociais

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <body>
 
     <div class="title">
-        <img src="profile.jpg" alt="profile" width="50px" height="50px" style="padding-right: 10px">
-        <h2>Bruno Pimentel</h2>
+        <img src="profile.jpg" alt="profile" width="75px" height="75px" style="padding-right: 10px">
+        <h1>Bruno Pimentel</h1>
     </div>
 
     <p>
@@ -53,9 +53,9 @@
         Working to influence people positively.
     </p>
 
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="https://facebook.com" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-instagram"></a>
+    <a href="https://linkedin.com/in/bfpimentel" class="fa fa-linkedin"></a>
+    <a href="https://facebook.com/bfpimentel" class="fa fa-facebook"></a>
+    <a href="https://instagram.com/fruno_" class="fa fa-instagram"></a>
 
 </body>
 
