--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
         .fa {
             background: #000000;
             color: #ffffff;
-            padding: 15px;
-            font-size: 20px;
-            width: 20px;
+            padding: 10px;
+            font-size: 15px;
+            width: 15px;
             text-align: center;
             text-decoration: none;
             border-radius: 50%;
+            margin-top: 5px;
         }
 
         img {
@@ -53,9 +54,14 @@
         Working to influence people positively.
     </p>
 
-    <a href="https://linkedin.com/in/bfpimentel" class="fa fa-linkedin"></a>
-    <a href="https://facebook.com/bfpimentel" class="fa fa-facebook"></a>
-    <a href="https://instagram.com/fruno_" class="fa fa-instagram"></a>
+    <p>
+        Contact me at:<br>
+        <a href="mailto:bruno@pimentel.dev">bruno@pimentel.dev</a><br><br>
+        or at any of my social media networks:<br>
+        <a href="https://linkedin.com/in/bfpimentel" class="fa fa-linkedin"></a>
+        <a href="https://facebook.com/bfpimentel" class="fa fa-facebook"></a>
+        <a href="https://instagram.com/fruno_" class="fa fa-instagram"></a>
+    </p>
 
 </body>
 
