Adicionada bandeira do Brasil na descrição

--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
             margin-top: 5px;
         }
 
-        img {
+        .profile {
+            width: 75px;
+            height: 75px;
+            padding-right: 10px;
             border-radius: 50%;
+        }
+
+        .countryflag {
+            width: 30px;
+            height: 30px;
         }
 
         .title {
@@ -43,11 +51,12 @@
 <body>
 
     <div class="title">
-        <img src="profile.jpg" alt="profile" width="75px" height="75px" style="padding-right: 10px">
+        <img src="profile.jpg" class="profile">
         <h1>Bruno Pimentel</h1>
     </div>
 
     <p>
+        <img src="https://lipis.github.io/flag-icon-css/flags/4x3/br.svg" class="countryflag"><br>
         21yo.<br>
         Mobile developer.<br>
         I seek getting better day after day.<br>
