--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <style>
         @font-face {
             font-family: RobotoMonoRegular;
             src: url('roboto-mono-regular.ttf');
         }
 
-        body {
-            margin: 30px 30px 30px 30px
-        }
-
         * {
             font-family: RobotoMonoRegular
+        }
+
+        body {
+            margin: 30px 30px 30px 30px;
         }
 
         .fa {
