--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
 <body>
 
+    <title>pimentel.dev</title>
+
     <div class="title">
         <img src="profile.jpg" class="profile">
         <h1>Bruno Pimentel</h1>
@@ -59,15 +61,22 @@
     <p>
         <img src="https://lipis.github.io/flag-icon-css/flags/4x3/br.svg" class="countryflag"><br>
         21yo.<br>
-        Mobile developer.<br>
+        Fast learner and self-taught.<br>
         I seek getting better day after day.<br>
         Working to influence people positively.
     </p>
 
     <p>
+        I have been working with Kotlin/Java Android development<br>
+        with well-known APIs such as RxJava, Retrofit2, Dagger2,<br>
+        JUnit, etc. all inside MVP and MVVM architectures and<br>
+        covered by SonarQube. 
+    </p>
+
+    <p>
         Contact me at:<br>
-        <a href="mailto:bruno@pimentel.dev">bruno@pimentel.dev</a><br><br>
-        or at any of my social media networks:<br>
+        <a href="mailto:bruno@pimentel.dev">bruno@pimentel.dev</a><br>
+        Or at any of my social media networks:<br>
         <a href="https://linkedin.com/in/bfpimentel" class="fa fa-linkedin"></a>
         <a href="https://facebook.com/bfpimentel" class="fa fa-facebook"></a>
         <a href="https://instagram.com/fruno_" class="fa fa-instagram"></a>
