--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     </style>
 </head>
 
-<body>
+<body style="max-width: 400px;">
 
     <title>pimentel.dev</title>
 
     <div class="title">
         <img src="profile.jpg" class="profile">
-        <h1>Bruno Pimentel</h1>
+        <h1>Bruno<br>Pimentel</h1>
     </div>
 
     <p>
@@ -63,17 +63,13 @@
         21yo.<br>
         Fast learner and self-taught.<br>
         I seek getting better day after day.<br>
-        Working to influence people positively.
-    </p>
-
-    <p>
-        I have been working with Kotlin/Java Android development<br>
-        with well-known APIs such as RxJava, Retrofit2, Dagger2,<br>
-        JUnit, etc. all inside MVP and MVVM architectures and<br>
-        covered by SonarQube. 
-    </p>
-
-    <p>
+        Working to influence people positively.<br>
+        <br>
+        I have been working with Kotlin/Java Android development
+        with well-known APIs such as RxJava, Retrofit2, Dagger2,
+        JUnit, etc. all inside MVP and MVVM architectures and
+        covered by SonarQube.<br>
+        <br>
         Contact me at:<br>
         <a href="mailto:bruno@pimentel.dev">bruno@pimentel.dev</a><br>
         Or at any of my social media networks:<br>
