--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <br>
         Contact me at:<br>
         <a href="mailto:bruno@pimentel.dev">bruno@pimentel.dev</a><br>
-        Or at any of my social media networks:<br>
+        or at any of my social media networks:<br>
         <a href="https://linkedin.com/in/bfpimentel" class="fa fa-linkedin"></a>
         <a href="https://facebook.com/bfpimentel" class="fa fa-facebook"></a>
         <a href="https://instagram.com/fruno_" class="fa fa-instagram"></a>
