Trocadas as cores primárias da página

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
         body {
             margin: 30px 30px 30px 30px;
+            background-color: #1a1a1a;
+        }
+
+        p {
+            color: #ffffff;
+        }
+
+        h1 {
+            color: #ffffff;
         }
 
         .fa {
@@ -58,7 +67,7 @@
         <h1>Bruno<br>Pimentel</h1>
     </div>
 
-    <p>
+    <p class="text">
         <img src="https://lipis.github.io/flag-icon-css/flags/4x3/br.svg" class="countryflag"><br>
         21yo.<br>
         Fast learner and self-taught.<br>
