Arrumada URL do instagram

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
     </div>
 
     <p class="text">
-        <img src="https://lipis.github.io/flag-icon-css/flags/4x3/br.svg" class="countryflag"><br>
-        21yo.<br>
+        Brazilian, 21yo.<br>
         Fast learner and self-taught.<br>
         I seek getting better day after day.<br>
         Working to influence people positively.<br>
@@ -84,7 +83,7 @@
         or at any of my social media networks:<br>
         <a href="https://linkedin.com/in/bfpimentel" class="fa fa-linkedin"></a>
         <a href="https://facebook.com/bfpimentel" class="fa fa-facebook"></a>
-        <a href="https://instagram.com/fruno_" class="fa fa-instagram"></a>
+        <a href="https://instagram.com/pimentel.dev" class="fa fa-instagram"></a>
     </p>
 
 </body>
