--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
         .profile {
             width: 75px;
             height: 75px;
-            padding-right: 10px;
             border-radius: 50%;
         }
 
@@ -60,12 +59,10 @@
 
 <body style="max-width: 400px;">
 
-    <title>pimentel.dev</title>
+    <title>Bruno Pimentel</title>
 
-    <div class="title">
-        <img src="profile.jpg" class="profile">
-        <h1>Bruno<br>Pimentel</h1>
-    </div>
+    <img src="profile.jpg" class="profile">
+    <h1>Bruno Pimentel</h1>
 
     <p class="text">
         Brazilian, 21yo.<br>
@@ -79,7 +76,7 @@
         covered by SonarQube.<br>
         <br>
         Contact me at:<br>
-        <a href="mailto:bruno@pimentel.dev">bruno@pimentel.dev</a><br>
+        <a href="mailto:bruno@pimentel.dev" style="color: rgb(194, 82, 82)">bruno@pimentel.dev</a><br>
         or at any of my social media networks:<br>
         <a href="https://linkedin.com/in/bfpimentel" class="fa fa-linkedin"></a>
         <a href="https://facebook.com/bfpimentel" class="fa fa-facebook"></a>
