Adicionado atalho para email

--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
         JUnit, etc. all inside MVP and MVVM architectures and
         covered by SonarQube.<br>
         <br>
-        Contact me at:<br>
-        <a href="mailto:bruno@pimentel.dev" style="color: rgb(194, 82, 82)">bruno@pimentel.dev</a><br>
-        or at any of my social media networks:<br>
+        <a href="mailto:bruno@pimentel.dev" class="fa fa-google"></a>
         <a href="https://linkedin.com/in/bfpimentel" class="fa fa-linkedin"></a>
         <a href="https://facebook.com/bfpimentel" class="fa fa-facebook"></a>
         <a href="https://instagram.com/pimentel.dev" class="fa fa-instagram"></a>
